Made a pass over the links in the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -16,10 +16,10 @@ while the `develop` branch stays up-to-date with our development work.
 
  - [Infrastructure](#infrastructure)
    - [Artifacts Moved to Maven Central](#artifacts-moved-to-maven-central)
-   - [Wiki Hosted on psl.linqs.org](#wiki-hosted-on-psl.linqs.org)
-   - [API Reference Hosted on psl.linqs.org](#api-reference-hosted-on-psl.linqs.org)
-   - [Development Repo Now linqs/psl](#development-repo-now-linqs/psl)
-   - [Issues Moved to linqs/psl](#issues-moved-to-linqs/psl)
+   - [Wiki Hosted on psl.linqs.org](#wiki-hosted-on-psllinqsorg)
+   - [API Reference Hosted on psl.linqs.org](#api-reference-hosted-on-psllinqsorg)
+   - [Development Repo Now linqs/psl](#development-repo-now-linqspsl)
+   - [Issues Moved to linqs/psl](#issues-moved-to-linqspsl)
 
  - [PSL Interfaces](#psl-interfaces)
    - [New Python Interface](#new-python-interface)
@@ -30,9 +30,9 @@ while the `develop` branch stays up-to-date with our development work.
    - [Functional Predicates](#functional-predicates)
    - [Multiple Evaluators](#multiple-evaluators)
    - [Output Ground Rules](#output-ground-rules)
-   - [Skip Database Commit](#skip-database-update)
-   - [Remove Extra Quoting](#removed-extra-quoting)
-   - [run.sh Takes Arguments](#run.sh-takes-arguments)
+   - [Skip Database Commit](#skip-database-commit)
+   - [Remove Extra Quoting](#remove-extra-quoting)
+   - [run.sh Takes Arguments](#runsh-takes-arguments)
 
  - [Performance](#performance)
    - [Reduced Memory](#reduced-memory)
@@ -64,12 +64,12 @@ The development versions are labeled as `CANARY` releases.
 ### Wiki Hosted on psl.linqs.org
 The PSL Wiki <https://github.com/linqs/psl/wiki>
 and PSL Development Wiki <https://github.com/eriq-augustine/psl/wiki>
-have been moved to [psl.linqs.org/wiki](https://psl.linqs.org/wiki/).
+have been moved to [psl.linqs.org/wiki](/wiki/).
 All stable and development releases going forward will have a version of the wiki available as either
 live webpages (for newer releases) or downloadable archives (for older releases).
 
 ### API Reference Hosted on psl.linqs.org
-Along with the Wiki, the API reference will now also be hosted at [psl.linqs.org/api](https://psl.linqs.org/api/).
+Along with the Wiki, the API reference will now also be hosted at [psl.linqs.org/api](/api/).
 All stable and development releases going forward will have a version of the API reference available as either
 live webpages (for newer releases) or downloadable archives (for older releases).
 
@@ -162,7 +162,7 @@ Fully implemented examples of the Java interface can be found in the [psl-exampl
 Instead of using `org.linqs.psl.groovy.PSLModel`, `org.linqs.psl.java.PSLModel` is used.
 The methods for the PSLModel class are now explicitly named, instead of being overloads of the same `add()` method.
 For example, instead of `model.add predicate: "Foo", ...`, you will use `model.addPredicate("Foo", ...)`.
-The full API for the PSLModel class can be found [here](https://psl.linqs.org/api/2.2.0/org/linqs/psl/java/PSLModel.html).
+The full API for the PSLModel class can be found [here](/api/2.2.0/org/linqs/psl/java/PSLModel.html).
 
 The Groovy interface allows rules to be specified as part of the Groovy syntax.
 However, rules in the Java interface must be specified as a String.
@@ -188,9 +188,9 @@ Dropping support for Groovy will allow us to support a wider range of Java versi
 ## **CLI Improvements**
 
 ### Functional Predicates
-Commit: [*ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)  
+Commit: [*ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)
 
-[Functional predicates](https://psl.linqs.org/wiki/2.2.0/External-Functions.html) are now supported in the CLI.
+[Functional predicates](/wiki/2.2.0/External-Functions.html) are now supported in the CLI.
 To use these, a `function` key needs to be specified in the predicate definition, e.g:
 ```yaml:
   Knows/2: open
@@ -276,20 +276,20 @@ This allows us to trade unused precision for memory and speed (depending on the 
 ### Matrix Operations
 Commit: [*8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
 
-We have added the [`FloatMatrix`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/util/FloatMatrix.html) class to handle low-level matrix operations.
+We have added the [`FloatMatrix`](/api/2.2.0/org/linqs/psl/util/FloatMatrix.html) class to handle low-level matrix operations.
 This classes uses the [Netlib library](https://www.netlib.org/) to call into the low-level [BLAS](https://en.wikipedia.org/wiki/Basic_Linear_Algebra_Subprograms) and [LAPACK](https://en.wikipedia.org/wiki/LAPACK) libraries.
 This allows us to easily perform efficient matrix operations.
 
 ### Streaming Grounding Results
 Commit: [*8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
 
-Grounding results can now be streamed from the database using the [`QueryResultIterable`](https://psl.linqs.org/api/develop/org/linqs/psl/database/QueryResultIterable.html) class.
+Grounding results can now be streamed from the database using the [`QueryResultIterable`](/api/develop/org/linqs/psl/database/QueryResultIterable.html) class.
 This allows the user to iterate through the grounding results without needing to keep them all in memory at the same time.
 
 ### Runtime Statistics
 Commit: [*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
 
-A new class, [RuntimeStats](https://psl.linqs.org/api/develop/org/linqs/psl/util/RuntimeStats.html),
+A new class, [RuntimeStats](/api/develop/org/linqs/psl/util/RuntimeStats.html),
 has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
 Setting the configuration option `runtimestats.collect` to `true` will enable the statistics collection.
 These collected stats are currently output to the `INFO` log level when the JVM terminates.
@@ -340,13 +340,13 @@ GPP is a search-based weight learning method that works by approximating a user 
 Although GPP tends to work better with a smoother metric, it can work well with any metric.
 The best metric to use depends on the specific problem being modeled.
 A major benefit of GPP, and all search-based methods, is that the metric being optimized can be the same as the metric that results are evaluated on.
-In contrast, likelihood-based methods (e.g. [Maximum Likelihood MPE](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/maxlikelihood/MaxLikelihoodMPE.html)) maximize the likelihood,
+In contrast, likelihood-based methods (e.g. [Maximum Likelihood MPE](/api/2.2.0/org/linqs/psl/application/learning/weight/maxlikelihood/MaxLikelihoodMPE.html)) maximize the likelihood,
 which may not be strongly correlated with the desired evaluation metrics.
 For further details about GPP, please see the paper: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355).
 
 To use GPP in PSL, you need to choose the right weight learning class and an evaluator that GPP will use to evaluate weight configurations.
-The class for GPP is [`org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html).
-You can choose an evaulator by setting the `weightlearning.evaluator` configuration option to any [Evaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html).
+The class for GPP is [`org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior`](/api/2.2.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html).
+You can choose an evaulator by setting the `weightlearning.evaluator` configuration option to any [Evaluator](/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html).
 
 For example, you can use the following command to use GPP in the CLI:
 ```
@@ -355,8 +355,8 @@ For example, you can use the following command to use GPP in the CLI:
 
 GPP has four main configuration options that the user should be aware of:
 * `weightlearning.evaluator`  
-Domain: Any [Evaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html)  
-Default: [ContinuousEvaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
+Domain: Any [Evaluator](/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html)  
+Default: [ContinuousEvaluator](/api/2.2.0/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
 The user defined metric function that GPP uses to evaluate and optimize weights.
 The best evaluator to use depends on your specific problem.
 
