Another pass over the 2.2.0 changelog with Vihang.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -61,6 +61,25 @@ Old builds will continue to be hosted at the old repository for the foreseeable 
 To find the new builds you can go to the [org.linqs](https://mvnrepository.com/artifact/org.linqs) group on Maven Central.
 The development versions are labeled as `CANARY` releases.
 
+Because PSL is now hosted on Maven central,
+you can now remove the [maven.linqs.org](http://maven.linqs.org) repository from your Maven configuration.
+In most cases, this means that you can remove the following section from your `pom.xml` files:
+```xml
+<repositories>
+    <repository>
+        <releases>
+            <enabled>true</enabled>
+            <updatePolicy>daily</updatePolicy>
+            <checksumPolicy>fail</checksumPolicy>
+        </releases>
+        <id>psl-releases</id>
+        <name>PSL Releases</name>
+        <url>http://maven.linqs.org/maven/repositories/psl-releases/</url>
+        <layout>default</layout>
+    </repository>
+</repositories>
+```
+
 ### Wiki Hosted on psl.linqs.org
 The PSL Wiki <https://github.com/linqs/psl/wiki>
 and PSL Development Wiki <https://github.com/eriq-augustine/psl/wiki>
@@ -99,42 +118,42 @@ The source for the interface is available in the [main PSL repository](https://g
 Fully implemented examples can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
 Below is a simplified example of the Python interface:
 ```python
-    import os
+import os
 
-    from pslpython.model import Model
-    from pslpython.partition import Partition
-    from pslpython.predicate import Predicate
-    from pslpython.rule import Rule
+from pslpython.model import Model
+from pslpython.partition import Partition
+from pslpython.predicate import Predicate
+from pslpython.rule import Rule
 
-    model = Model('sample-model')
+model = Model('sample-model')
 
-    # Add predicates.
-    predicate = Predicate('Foo', closed = True, size = 2)
-    model.add_predicate(predicate)
+# Add predicates.
+predicate = Predicate('Foo', closed = True, size = 2)
+model.add_predicate(predicate)
 
-    predicate = Predicate('Bar', closed = False, size = 2)
-    model.add_predicate(predicate)
+predicate = Predicate('Bar', closed = False, size = 2)
+model.add_predicate(predicate)
 
-    # Add rules.
-    model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
-    model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
+# Add rules.
+model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
+model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
 
-    # Load data.
-    path = os.path.join('data', 'foo_obs.txt')
-    model.get_predicate('Foo').add_data_file(Partition.OBSERVATIONS, path)
+# Load data.
+path = os.path.join('data', 'foo_obs.txt')
+model.get_predicate('Foo').add_data_file(Partition.OBSERVATIONS, path)
 
-    path = os.path.join('data', 'bar_targets.txt')
-    model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
+path = os.path.join('data', 'bar_targets.txt')
+model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
 
-    # Run inference.
-    results = model.infer()
+# Run inference.
+results = model.infer()
 
-    # Write out results.
-    out_dir = 'inferred-predicates'
-    os.makedirs(out_dir, exist_ok = True)
+# Write out results.
+out_dir = 'inferred-predicates'
+os.makedirs(out_dir, exist_ok = True)
 
-    out_path = os.path.join(out_dir, "bar.txt")
-    results[model.get_predicate('Bar')].to_csv(out_path, sep = "\t", header = False, index = False)
+out_path = os.path.join(out_dir, "bar.txt")
+results[model.get_predicate('Bar')].to_csv(out_path, sep = "\t", header = False, index = False)
 ```
 
 In addition to creating models in Python, you can use the PSL python package to invoke the PSL CLI interface directory.
@@ -219,7 +238,7 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator Con
 Commits: [*62fbd2cc*](https://github.com/linqs/psl/commit/62fbd2cc20c8360c365a02be2cdc4f871a4f5798) ,
 [*b901e937*](https://github.com/linqs/psl/commit/b901e937ed2869b5dcc184585ea29c5fa77b1170)
 
-The CLI accepts two new arguments that can be used to see the ground rules being processed.
+The CLI accepts two new arguments that can be used to see the ground rules being processed.  
 `-gr`/`--groundrules` can be used to output the ground rules **before** inference is run.
 This will show the ground rules as early as possible.
 While `--satisfaction` will output ground rules along with their satisfaction value **after** inference is run.
@@ -283,19 +302,19 @@ This allows us to easily perform efficient matrix operations.
 ### Streaming Grounding Results
 Commit: [*8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
 
-Grounding results can now be streamed from the database using the [`QueryResultIterable`](/api/develop/org/linqs/psl/database/QueryResultIterable.html) class.
+Grounding results can now be streamed from the database using the [`QueryResultIterable`](/api/2.2.0/org/linqs/psl/database/QueryResultIterable.html) class.
 This allows the user to iterate through the grounding results without needing to keep them all in memory at the same time.
 
 ### Runtime Statistics
 Commit: [*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
 
-A new class, [RuntimeStats](/api/develop/org/linqs/psl/util/RuntimeStats.html),
+A new class, [RuntimeStats](/api/2.2.0/org/linqs/psl/util/RuntimeStats.html),
 has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
 Setting the configuration option `runtimestats.collect` to `true` will enable the statistics collection.
 These collected stats are currently output to the `INFO` log level when the JVM terminates.
 
 Currently, memory information is automatically collected.
-In addition, the user can call the static `logDiskRead` and `logDiskWrite` methods to keep track of I/O operations.
+In addition, the user can call the static `logDiskRead()` and `logDiskWrite()` methods to keep track of I/O operations.
 
 Using the statistics looks like:
 ```
