Working on 2.3.0 release notes. Added sentence about dropping Java 7 support from 3.0.0.

--- a/_posts/2022-07-08-psl-2.3.0-release.md
+++ b/_posts/2022-07-08-psl-2.3.0-release.md
@@ -12,6 +12,7 @@ We are happy to announce the release of PSL version 2.3.0!
 We have made great improvements to PSL in the areas of optimization and infrastructure.
 In this changelog, you will find a list of the major changes in 2.3.0 as well as information on migrating from 2.2.2.
 2.3.0 is scheduled to be the last minor release before our next major release, PSL 3.0.0.
+PSL 3.0.0 will contain breaking including dropping Java 7 support.
 
 For those of you that learn better by example, check out the [PSL examples repository](https://github.com/linqs/psl-examples).
 Tags are included in the PSL examples repository that track specific versions of PSL to help you ensure the examples are using the same version of PSL as you.
