--- a/_posts/2019-12-06-psl-2.2.1-release.md
+++ b/_posts/2019-12-06-psl-2.2.1-release.md
@@ -181,7 +181,7 @@ Fully implemented examples of the Java interface can be found in the [psl-exampl
 Instead of using `org.linqs.psl.groovy.PSLModel`, `org.linqs.psl.java.PSLModel` is used.
 The methods for the PSLModel class are now explicitly named, instead of being overloads of the same `add()` method.
 For example, instead of `model.add predicate: "Foo", ...`, you will use `model.addPredicate("Foo", ...)`.
-The full API for the PSLModel class can be found [here](/api/2.2.1/org/linqs/psl/java/PSLModel.html).
+The full API for the PSLModel class can be found [here](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/java/PSLModel.html).
 
 The Groovy interface allows rules to be specified as part of the Groovy syntax.
 However, rules in the Java interface must be specified as a String.
@@ -295,20 +295,20 @@ This allows us to trade unused precision for memory and speed (depending on the 
 ### Matrix Operations
 Commit: [*8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
 
-We have added the [`FloatMatrix`](/api/2.2.1/org/linqs/psl/util/FloatMatrix.html) class to handle low-level matrix operations.
+We have added the [`FloatMatrix`](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/util/FloatMatrix.html) class to handle low-level matrix operations.
 This classes uses the [Netlib library](https://www.netlib.org/) to call into the low-level [BLAS](https://en.wikipedia.org/wiki/Basic_Linear_Algebra_Subprograms) and [LAPACK](https://en.wikipedia.org/wiki/LAPACK) libraries.
 This allows us to easily perform efficient matrix operations.
 
 ### Streaming Grounding Results
 Commit: [*8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
 
-Grounding results can now be streamed from the database using the [`QueryResultIterable`](/api/2.2.1/org/linqs/psl/database/QueryResultIterable.html) class.
+Grounding results can now be streamed from the database using the [`QueryResultIterable`](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/database/QueryResultIterable.html) class.
 This allows the user to iterate through the grounding results without needing to keep them all in memory at the same time.
 
 ### Runtime Statistics
 Commit: [*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
 
-A new class, [RuntimeStats](/api/2.2.1/org/linqs/psl/util/RuntimeStats.html),
+A new class, [RuntimeStats](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/util/RuntimeStats.html),
 has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
 Setting the configuration option `runtimestats.collect` to `true` will enable the statistics collection.
 These collected stats are currently output to the `INFO` log level when the JVM terminates.
@@ -362,13 +362,13 @@ GPP is a search-based weight learning method that works by approximating a user 
 Although GPP tends to work better with a smoother metric, it can work well with any metric.
 The best metric to use depends on the specific problem being modeled.
 A major benefit of GPP, and all search-based methods, is that the metric being optimized can be the same as the metric that results are evaluated on.
-In contrast, likelihood-based methods (e.g. [Maximum Likelihood MPE](/api/2.2.1/org/linqs/psl/application/learning/weight/maxlikelihood/MaxLikelihoodMPE.html)) maximize the likelihood,
+In contrast, likelihood-based methods (e.g. [Maximum Likelihood MPE](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/application/learning/weight/maxlikelihood/MaxLikelihoodMPE.html)) maximize the likelihood,
 which may not be strongly correlated with the desired evaluation metrics.
 For further details about GPP, please see the paper: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355).
 
 To use GPP in PSL, you need to choose the right weight learning class and an evaluator that GPP will use to evaluate weight configurations.
-The class for GPP is [`org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior`](/api/2.2.1/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html).
-You can choose an evaulator by setting the `weightlearning.evaluator` configuration option to any [Evaluator](/api/2.2.1/org/linqs/psl/evaluation/statistics/Evaluator.html).
+The class for GPP is [`org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior`](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html).
+You can choose an evaulator by setting the `weightlearning.evaluator` configuration option to any [Evaluator](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/evaluation/statistics/Evaluator.html).
 
 For example, you can use the following command to use GPP in the CLI:
 ```
@@ -377,8 +377,8 @@ For example, you can use the following command to use GPP in the CLI:
 
 GPP has four main configuration options that the user should be aware of:
 * `weightlearning.evaluator`  
-Domain: Any [Evaluator](/api/2.2.1/org/linqs/psl/evaluation/statistics/Evaluator.html)  
-Default: [ContinuousEvaluator](/api/2.2.1/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
+Domain: Any [Evaluator](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/evaluation/statistics/Evaluator.html)  
+Default: [ContinuousEvaluator](https://javadoc.io/static/org.linqs/psl-core/2.3.0/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
 The user defined metric function that GPP uses to evaluate and optimize weights.
 The best evaluator to use depends on your specific problem.
 
